# mixxx

res/skins/LateNight/: mixer.xml  toolbar.xml
res/skins/LateNight/decks/: deck_full.xml  row_1_keyVinylFx.xml  row_4_overviewSpinny.xml  row_4_overviewSpinny_compact.xml  row_5_play_button.xml  row_5_transportLoopJump_socialdj.xml
res/skins/LateNight/mixer/: channel_left_socialdj_eq.xml  channel_right_socialdj_eq.xml  channel_volume_slider.xml  mixer_2decks_socialdj.xml  mixer_main_headphone_socialdj.xml
src/proto/: CMakeLists.txt
